// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthRoute: Component should render <ExternalRedirect> if not authenticated 1`] = `
<ExternalRedirect
  to="http://localhost/auth/login/auth0"
/>
`;

exports[`AuthRoute: Component should render <Route> if is anonymous user 1`] = `
<Route
  authBackend="auth0"
  fetchCurrentUser={[Function]}
  isAuth0Backend={true}
  isAuthenticated={false}
  isOktaBckend={false}
  isUserFetched={true}
  requireAnonymous={true}
/>
`;

exports[`AuthRoute: Component should render <Route> if user is logged and all criterias are met 1`] = `
<Route
  authBackend="auth0"
  fetchCurrentUser={[Function]}
  isAuth0Backend={true}
  isAuthenticated={true}
  isOktaBckend={false}
  isUserFetched={true}
  requireAnonymous={false}
/>
`;

exports[`AuthRoute: Component should render a <Redirect /> to home page when user is authenticated, fetched and require anonymous 1`] = `
<Redirect
  to="/"
/>
`;

exports[`AuthRoute: Component should render null if authBackend is null 1`] = `""`;

exports[`AuthRoute: Component should render null if user is not fetched 1`] = `""`;
